--- a/src/views/includes/head.ejs
+++ b/src/views/includes/head.ejs
@@ -4,7 +4,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Agenda</title>
-    <link rel="icon" href="../../../frontend/img/livro-de-visitas.png" type="image/png">
+    <link rel="icon" 
+      type="image/jpg" 
+      href="../../../frontend/img/livro-de-visitas.png" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
