--- a/src/views/includes/head.ejs
+++ b/src/views/includes/head.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>AGENDA</title>
+    <title>Agenda</title>
     <link rel="icon" 
       type="image/jpg" 
       href="../../../frontend/img/livro-de-visitas.png" />
